<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>onrobot_2fg7_tutorials</name>
    <version>0.0.0</version>
    <description>ROS 2 Humble examples for the OnRobot 2FG7 gripper.</description>
    <maintainer email="u598104j@ecs.osaka-u.ac.jp">Haruto Nagai</maintainer>
    <author email="u598104j@ecs.osaka-u.ac.jp">Haruto Nagai</author>
    <license>BSD</license>

    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>onrobot_interfaces</depend>
    <depend>onrobot_2fg7_description</depend>
    <depend>launch</depend>
    <depend>launch_ros</depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
